--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta name = "viewport" content='width=device-width initial-scale=1.0'/>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css"/>
+  <link rel="manifest" href="/manifest.json"/>
+  <meta name="theme-color" content="#090979"/>
   <script type = "application/javascript" charset="utf-8" src="sw.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
